Setting up phone masks

--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -3211,8 +3211,11 @@ div.btn-update-picture:hover {
 }
 
 #picture-clear_id {
-        margin-top: -150px;
+    margin-top: -150px;
     float: right;
 }
 
+#profile-description {
+    font-style: italic;
+}
 
