--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -7,7 +7,8 @@
 
     {% with profile_user.userprofile as profile %}
         {% if profile_user.id == user.id %}
-        <form id="profile-form" action="{% url 'update_profile' %}" class="account-form" method="post" enctype="multipart/form-data">
+            <form id="profile-form" action="{% url 'update_profile' %}" class="account-form" method="post"
+                  enctype="multipart/form-data" onsubmit="return validateForm()">
         {% csrf_token %}
         {% endif %}
         <div class="row">
@@ -124,7 +125,7 @@
                                 {# First name #}
                                 <fieldset class="col-sm-4">
                                     <label>First name *</label>
-                                    <input class="form-control" value="{{ profile_user.first_name }}" name="first_name">
+                                    <input class="form-control form-required" value="{{ profile_user.first_name }}" name="first_name">
                                 </fieldset>
 
                                 {# Middle name #}
@@ -136,7 +137,7 @@
                                 {# Last name #}
                                 <fieldset class="col-sm-4">
                                     <label>Last name *</label>
-                                    <input class="form-control" value="{{ profile_user.last_name }}" name="last_name">
+                                    <input class="form-control form-required" value="{{ profile_user.last_name }}" name="last_name">
                                 </fieldset>
                             </div>
 
@@ -144,10 +145,8 @@
                                 {# Username #}
                                 <fieldset class="col-sm-4">
                                     <label>Username *</label>
-                                    <input class="form-control" value="{{ profile_user.username }}" name="username">
-                                    <small class="text-muted">Only letters, numbers, dashes or
-                                        underscores.
-                                    </small>
+                                    <input class="form-control form-required" value="{{ profile_user.username }}" name="username">
+                                    <small class="text-muted">Only letters, numbers, dashes or underscores.</small>
                                 </fieldset>
                             </div>
 
@@ -155,7 +154,7 @@
                                 {# Organization #}
                                 <fieldset class="col-sm-6">
                                     <label>Organization *</label>
-                                    <input class="form-control" {% if profile.organization %}value="{{ profile.organization }}"{% endif %} name="organization">
+                                    <input class="form-control form-required" {% if profile.organization %}value="{{ profile.organization }}"{% endif %} name="organization">
                                     <small class="text-muted">The name of the organization you work for.</small>
                                 </fieldset>
 
@@ -319,14 +318,18 @@
                                                 <td><span class="text-muted">User type</span></td>
                                                 <td id="db-user-type">{{ profile.user_type }}</td>
                                             </tr>
-                                            <tr>
-                                                <td><span class="text-muted">Country</span></td>
-                                                <td>{% if profile.country %}{{ profile.country }}{% endif %}</td>
-                                            </tr>
-                                            <tr>
-                                                <td><span class="text-muted">State/Province</span></td>
-                                                <td>{{ profile.state }}</td>
-                                            </tr>
+                                            {% if profile.country %}
+                                                <tr>
+                                                    <td><span class="text-muted">Country</span></td>
+                                                    <td>{{ profile.country }}</td>
+                                                </tr>
+                                            {% endif %}
+                                            {% if profile.state %}
+                                                <tr>
+                                                    <td><span class="text-muted">State/Province</span></td>
+                                                    <td>{{ profile.state }}</td>
+                                                </tr>
+                                            {% endif %}
                                             <tr>
                                                 <td><span class="text-muted">User since</span></td>
                                                 <td>{{ profile_user.date_joined }}</td>
@@ -347,7 +350,7 @@
 
                                         <fieldset>
                                             <label for="selectUserType">User type *</label>
-                                            <select name="user_type" class="form-control" id="selectUserType">
+                                            <select name="user_type" class="form-control form-required" id="selectUserType">
                                                 <option value="Unspecified">Unspecified</option>
                                                 <option value="University Faculty">University Faculty</option>
                                                 <option value="University Professional or Research Staff">University Professional or Research Staff</option>
@@ -364,17 +367,17 @@
 
                                         <fieldset id="user-type-other">
                                             <label>Specify: *</label>
-                                            <input name="user_type" class="form-control" value="{{ profile.user_type }}">
+                                            <input name="user_type" class="form-control form-required" value="{{ profile.user_type }}">
                                         </fieldset>
 
                                         <fieldset>
                                             <label>Country *</label>
-                                            <input name="country" class="form-control" {% if profile.country %}value="{{ profile.country }}"{% endif %}>
+                                            <input name="country" class="form-control form-required" {% if profile.country %}value="{{ profile.country }}"{% endif %}>
                                         </fieldset>
 
                                         <fieldset>
                                             <label>State/Province *</label>
-                                            <input name="state" class="form-control" {% if  profile.state %}value="{{ profile.state }}"{% endif %}>
+                                            <input name="state" class="form-control form-required" {% if  profile.state %}value="{{ profile.state }}"{% endif %}>
                                         </fieldset>
 
                                         <fieldset>
@@ -676,6 +679,20 @@
 {% block extra_js %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.13.4/jquery.mask.min.js" type="text/javascript"></script>
     <script type="text/javascript">
+
+        function validateForm() {
+            // Required elements
+            var flag = true;
+            var requiredElements = $(".form-required");
+            for (var i = 0; i < requiredElements.length; i++) {
+                if (!$(requiredElements[i]).val()) {
+                    $(requiredElements[i]).addClass("form-invalid");
+                    flag = false;
+                }
+            }
+            return flag;
+        }
+
         function setEditMode() {
             $("[data-page-mode='view']").hide();
             $("[data-page-mode='edit']").fadeIn();
@@ -717,6 +734,15 @@
                     $("#user-type-other").hide();
                     $("#user-type-other input").removeAttr("name");
                     $("#selectUserType").attr("name", "user_type");
+                }
+            });
+
+            $(".form-required").change(function(){
+                if ($(this).val()) {
+                    $(this).removeClass("form-invalid");
+                }
+                else {
+                    $(this).addClass("form-invalid");
                 }
             });
 
