--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -38,10 +38,13 @@
                         {% if profile_user.id == user.id %}
                             <div data-page-mode="edit" class="text-center">
                             {% if profile.picture and profile.picture.url %}
-                                <div class="btn-file btn-update-picture"><span class="glyphicon glyphicon-camera"></span>&nbsp;&nbsp;Update profile picture<input
-                                        type="file" name="picture"></div>
-                                <button class="btn btn-default" id="picture-clear_id" name="picture-clear" title="Remove profile picture"
-                                        value="clear"><span class="glyphicon glyphicon-trash"></span>
+                                <div class="btn-file btn-update-picture"><span
+                                        class="glyphicon glyphicon-camera"></span>&nbsp;&nbsp;Update profile
+                                    picture<input
+                                            type="file" name="picture"></div>
+                                <button id="btn-delete-profile-pic" class="no-style icon-button btn-remove" data-toggle="modal"
+                                        data-target="#delete-picture" title="Remove profile picture"><span
+                                        class="glyphicon glyphicon-trash"></span>
                                 </button>
                             {% else %}
                                 <fieldset>
@@ -193,11 +196,11 @@
                                         <div id="group-cv" class="btn-group text-center" role="group"
                                              aria-label="CV">
 
-                                        <span class="btn btn-default btn-file" title="Update CV">
+                                        <span class="btn-file icon-button btn-edit" title="Update CV">
                                             <span class="glyphicon glyphicon-retweet"></span>
                                             <input type="file" name="cv">
                                         </span>
-                                            <button class="btn btn-default" id="cv-clear_id" name="cv-clear"
+                                            <button class="no-style icon-button btn-remove" id="cv-clear_id" name="cv-clear"
                                                     title="Remove CV"
                                                     value="clear"><span
                                                     class="glyphicon glyphicon-trash"></span>
@@ -314,10 +317,12 @@
 
                                         <table class="overview" data-page-mode="view">
                                             <tbody>
-                                            <tr>
-                                                <td><span class="text-muted">User type</span></td>
-                                                <td id="db-user-type">{{ profile.user_type }}</td>
-                                            </tr>
+                                            {% if profile.user_type %}
+                                                <tr>
+                                                    <td><span class="text-muted">User type</span></td>
+                                                    <td id="db-user-type">{{ profile.user_type }}</td>
+                                                </tr>
+                                            {% endif %}
                                             {% if profile.country %}
                                                 <tr>
                                                     <td><span class="text-muted">Country</span></td>
@@ -641,34 +646,60 @@
                 </div>
             </div>
         </div>
-        </form>
 
-        <!-- Modal -->
-        <div class="modal fade" id="deactivate-account-dialog" tabindex="-1" role="dialog"
-             aria-labelledby="Deactivate account">
+    <!-- Deactivate Account Modal -->
+    <div class="modal fade" id="deactivate-account-dialog" tabindex="-1" role="dialog"
+         aria-labelledby="Deactivate account">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"
+                            aria-label="Close"><span aria-hidden="true">&times;</span>
+                    </button>
+                    <h4 class="modal-title" id="myModalLabel">Deactivate Account</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-sm-2 col-xs-12 text-center">
+                            <span id="icon-warning" class="glyphicon glyphicon-warning-sign"></span>
+                        </div>
+                        <div class="col-sm-10 col-xs-12">
+                            <div>WARNING: THIS IS A PERMANENT ACTION</div>
+                            <span>Are you sure you want to deactivate your account?</span>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <a href="{% url 'deactivate_account' %}" class="btn btn-danger">Confirm</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    </form>
+
+        <!-- Delete picture modal -->
+        <div class="modal fade" id="delete-picture" tabindex="-1" role="dialog"
+             aria-labelledby="myModalLabel">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal"
                                 aria-label="Close"><span aria-hidden="true">&times;</span>
                         </button>
-                        <h4 class="modal-title" id="myModalLabel">Deactivate Account</h4>
+                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
                     </div>
                     <div class="modal-body">
-                        <div class="row">
-                            <div class="col-sm-2 col-xs-12 text-center">
-                                <span id="icon-warning" class="glyphicon glyphicon-warning-sign"></span>
-                            </div>
-                            <div class="col-sm-10 col-xs-12">
-                                <div>WARNING: THIS IS A PERMANENT ACTION</div>
-                                <span>Are you sure you want to deactivate your account?</span>
-                            </div>
-                        </div>
-
+                        Are you sure?
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-danger">Confirm</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">
+                            Close
+                        </button>
+                        <button class="btn btn-primary" id="picture-clear_id" name="picture-clear"
+                                value="clear">Confirm
+                        </button>
                     </div>
                 </div>
             </div>
